# goiaba

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Taskfile.yaml
.github/workflows/: test.yml
examples/: parser_simple.rs
go_examples/: algorithms.go  arrays.go  calculator.go  combined.go  strings.go  structs.go  switch.go
src/: compiler.rs  lib.rs  main.rs
src/bindings/: mod.rs
src/parser/: LICENSE  ast.rs  errors.rs  map.rs  mod.rs  objects.rs  parser.rs  position.rs  scanner.rs  scope.rs  tests.rs  token.rs  visitor.rs
src/wasm/: compiler.rs  mod.rs
src/wasm/std/: mod.rs
tests/: arrays_slices_tests.rs  examples_tests.rs  parser.rs  string_tests.rs  struct_fields_tests.rs  switch_tests.rs  target_wasm_tests.rs  wasm_compiler.rs
