[package]
name = "goiaba"
version = "0.0.2"
edition = "2024"
repository = "https://github.com/raphamorim/goiaba"
license = "BSD-3-Clause"
description = "Experimental Go parser and compiler"

[lib]
crate-type = ["cdylib", "rlib"]

[features] 
default = []
btree_map = []
serde_borsh = ["dep:borsh"]

[dependencies]
borsh = { version ="0.10.3", optional = true } 
wasm-encoder = "0.239.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
wasmtime = "25.0.0"